
SUBDIRS=pieces

libmgncsincludedir=$(includedir)/mgncs

TEXTEDITOR_HDRS=mbtree.h mtexteditbase.h mtextedit.h

libmgncsinclude_HEADERS=  mrdr.h \
		   mgncs.h mobject.h mcomponent.h mwidget.h mresmgr.h \
		   mstatic.h mimage.h mrect.h mgroupbox.h mbuttongroup.h \
		   mbutton.h mcheckbutton.h mradiobutton.h \
		   mscroll_widget.h mpanel.h mprogressbar.h mcombobox.h \
		   mspinbox.h mspinner.h mslider.h mtrackbar.h mcontainer.h \
		   mcommon.h mpage.h mpropsheet.h mmainwnd.h mdialog.h \
		   mitem.h mitem_manager.h minvisible-component.h mtimer.h \
		   medit.h msledit.h mitemview.h mlistbox.h mscrollview.h \
		   miconview.h mlistcolumn.h mlistitem.h mlistview.h \
		   mmledit.h mscrollbar.h \
		   mmonthcalendar.h \
		   mpopmenumgr.h \
		   mtoolitem.h mtoolbaritems.h \
		   mtoolbar.h \
		   mmenubutton.h \
		   mledstatic.h \
		   mcolorbutton.h \
		   manimate.h manimateframes.h mmemanimateframes.h mgifanimateframes.h mbmparrayanimateframes.h \
		   mseparator.h \
		   mdatabinding.h \
		   mdatasource.h \
		   mtype.h mdblist.h  \
		   piece.h \
		   hashtable.h \
		   mem-slab.h \
		   mime.h mime-wordsel.h \
		   mnode.h mradionode.h mchecknode.h mabstractlist.h mlist.h mlist_layout.h \
		   $(TEXTEDITOR_HDRS)


EXTRA_DIST=makefile.ng

