AUTOMAKE_OPTIONS=foreign

TOP_DIR=..

AM_CPPFLAGS=-I$(TOP_DIR) -I$(TOP_DIR)/include -I.

SUBDIRS=databinding datasource imetest

COMMON_LADD=@APP_LIBS@ -lstdc++

noinst_PROGRAMS=static radiogroup container progressbar combobox \
				spinbox spinner mainwnd image propsheet \
				commrdrtest listbox trackbar rectangle \
				groupbox button checkbutton timer iconview sledit listview scrollview\
				scrollbar mledit toolbar menubutton \
				ledstatic animation monthcalendar\
				name2value separator colorbutton \
				bindtest \
				staticds \
				textedit \
				resdump list list_group \
				imagebutton

static_SOURCES=static.c
static_LDADD=$(COMMON_LADD)

ledstatic_SOURCES=ledstatic.c
ledstatic_LDADD=$(COMMON_LADD)

radiogroup_SOURCES=radiogroup.c
radiogroup_LDADD=$(COMMON_LADD)

container_SOURCES=container.c
container_LDADD=$(COMMON_LADD)

progressbar_SOURCES=progressbar.c
progressbar_LDADD=$(COMMON_LADD)

combobox_SOURCES=combobox.c
combobox_LDADD=$(COMMON_LADD)

spinbox_SOURCES=spinbox.c
spinbox_LDADD=$(COMMON_LADD)

spinner_SOURCES=spinner.c
spinner_LDADD=$(COMMON_LADD)

mainwnd_SOURCES=mainwnd.c
mainwnd_LDADD=$(COMMON_LADD)

image_SOURCES=image.c
image_LDADD=$(COMMON_LADD)

propsheet_SOURCES=propsheet.c
propsheet_LDADD=$(COMMON_LADD)

commrdrtest_SOURCES=commrdrtest.c
commrdrtest_LDADD=$(COMMON_LADD)

listbox_SOURCES=listbox.c
listbox_LDADD=$(COMMON_LADD)

trackbar_SOURCES=trackbar.c
trackbar_LDADD=$(COMMON_LADD)

rectangle_SOURCES=rectangle.c
rectangle_LDADD=$(COMMON_LADD)

groupbox_SOURCES=groupbox.c
groupbox_LDADD=$(COMMON_LADD)

button_SOURCES=button.c
button_LDADD=$(COMMON_LADD)

menubutton_SOURCES=menubutton.c
menubutton_LDADD=$(COMMON_LADD)

timer_SOURCES=timer.c
timer_LDADD=$(COMMON_LADD)

iconview_SOURCES=iconview.c
iconview_LDADD=$(COMMON_LADD)

listview_SOURCES=listview.c
listview_LDADD=$(COMMON_LADD)

scrollview_SOURCES=scrollview.c
scrollview_LDADD=$(COMMON_LADD)

sledit_SOURCES=sledit.c
sledit_LDADD=$(COMMON_LADD)

mledit_SOURCES=mledit.c
mledit_LDADD=$(COMMON_LADD)

scrollbar_SOURCES=scrollbar.c
scrollbar_LDADD=$(COMMON_LADD)

toolbar_SOURCES=toolbar.c
toolbar_LDADD=$(COMMON_LADD)

monthcalendar_SOURCES=monthcalendar.c
monthcalendar_LDADD=$(COMMON_LADD)

animation_SOURCES=animation.c
animation_LDADD=$(COMMON_LADD)

name2value_SOURCES=name2value.c
name2value_LDADD=$(COMMON_LADD)

separator_SOURCES=separator.c
separator_LDADD=$(COMMON_LADD)

checkbutton_SOURCES=checkbutton.c
checkbutton_LDADD=$(COMMON_LADD)

colorbutton_SOURCES=colorbutton.c
colorbutton_LDADD=$(COMMON_LADD)

bindtest_SOURCES=bindtest.c
bindtest_LDADD=$(COMMON_LADD)

staticds_SOURCES=staticds.c
staticds_LDADD=$(COMMON_LADD)

resdump_SOURCES=resdump.c
resdump_LDADD=$(COMMON_LADD)

list_SOURCES=list.c
list_LDADD=$(COMMON_LADD)

list_group_SOURCES=list_group.c
list_group_LDADD=$(COMMON_LADD)

textedit_SOURCES=textedit.c
textedit_LDADD=$(COMMON_LADD)

imagebutton_SOURCES=imagebutton.c
imagebutton_LDADD=$(COMMON_LADD)

EXTRA_DIST=

