
libmgncsincludedir=$(includedir)/mgncs/pieces

HEAD_FILES= mbuttonboxpiece.h \
			mcontainerpiece.h \
			mhotpiece.h \
			mimagepiece.h \
			mlabelpiece.h \
			mrenderablepiece.h \
			mstaticpiece.h \
			mpairpiece.h \
			mabstractbuttonpiece.h \
			mlayoutpiece.h \
			mpushbuttonpiece.h \
			mimagelabelpiece.h \
			msliderpiece.h \
			mthumbboxpiece.h \
			mtrackbarpiece.h \
			mcheckbuttonpiece.h \
			mcheckboxpiece.h \
			mradioboxpiece.h \
			mscrollbarpiece.h \
			marrowpiece.h \
			mleftarrowpiece.h \
			mrightarrowpiece.h \
			muparrowpiece.h \
			mdownarrowpiece.h \
			mboxlayoutpiece.h \
			mhboxlayoutpiece.h \
			mvboxlayoutpiece.h  \
			manimatepiece.h \
			marrowbuttonpiece.h \
			mspinboxpiece.h \
			mspinnerpiece.h \
			mhspinboxpiece.h \
			mvspinboxpiece.h \
			mgridboxpiece.h \
			mdaygridpiece.h \
			mmonthpiece.h \
			mnumspinnedpiece.h \
			mlistspinnedpiece.h \
			mweekheadpiece.h \
			mtoolimgpiece.h \
			mseparatorpiece.h \
			mlinelayoutpiece.h \
			mwidgetwrapperpiece.h \
			mrectpiece.h \
			mprogresspiece.h \
			mscrollthumbboxpiece.h \
			mledstaticpiece.h \
			msimplelistpiece.h \
			piece-id.h 

libmgncsinclude_HEADERS=$(HEAD_FILES)

EXTRA_DIST=makefile.ng
